Tue Feb 28 00:00:22 1995  John Gilmore  (gnu at toad.com)

	* aclocal.m4 (ADD_DEF):  Add -I...include/krb5 so we won't need
	pathnames to Kerberos include files in any of the #include lines
	in the source tree.

Mon Feb 13 23:39:21 1995  Theodore Y. Ts'o  (tytso@dcl)

	* aclocal.m4 (WITH_LINKER): Add a new configure production which
		allows a special linker to be specified.  Useful for
		running programs like Purify, etc.		

Thu Feb 9 15:42:00 1995 Keith Vetter (keithv@fusion.com)

	* acconfig.h: added HAS_SYS_FILE_H & HAS_SYS_PARAM_H for Windows

Thu Feb  2 21:11:24 1995  Mark Eichin  (eichin@cygnus.com)

	* aclocal.m4 (V5_AC_OUTPUT_MAKEFILE): delete pre.out,
	Makefile.out, and post.out immediately after using them, for
	cleanliness' sake.

Fri Feb  3 06:47:24 1995  Theodore Y. Ts'o  (tytso@dcl)

	* acconfig.h: Remove BITS* definitions altogether.

	* aclocal.m4:
	* configure.in: Remove ISODE defines

Fri Dec 30 17:05:12 1994  Richard Basch  (probe@tardis)

	* aclocal.m4
	  	CHECK_UTMP needs to #include <sys/types.h> for its tests

Tue Dec 27 06:10:13 1994  Richard Basch  (probe@tardis)

	* aclocal.m4
	combined KRB5_UTPID, KRB5_UTTYPE, and KRB5_UTHOST
	into CHECK_UTMP macro (and added additional checks)


Wed Nov 30 17:13:02 1994  Theodore Y. Ts'o  (tytso@dcl)

	* aclocal.m4, configure.in: Add appropriate help text for the
		--with-* and --enable-* options.  ISODE_INCLUDES should
		define KRB5_USE_ISODE if necessary.

	* acconfig.h: Add defines for KRB5_ATHENA_COMPAT and
		KRB5_KRB4_COMPAT.

Fri Nov 18 15:38:42 1994  Mark Eichin  <eichin@cygnus.com>

	* aclocal.m4 (CHECK_WAIT_TYPE, CHECK_SIGNALS, CHECK_SETJMP,
	KRB5_UTPID, KRB5_UTTYPE, KRB5_UTHOST, KRB5_UTEXIT): use
	AC_TRY_COMPILE instead of AC_TRY_LINK.
	(CHECK_FCNTL): check for 1+O_RDONLY so we aren't fooled into
	declaring it as a local variable.
	(DECLARE_SYS_ERRLIST): same thing for 1+sys_nerr.

Fri Nov 18 00:31:43 1994  Mark Eichin  <eichin@cygnus.com>
